# zmk-hero-driver

./: .gitignore  CMakeLists.txt  Kconfig  README.md
drivers/input/: hero_axis.c  hero_axis.h  hero_config.c  hero_cpi.c  hero_cpi.h  hero_timing.c  hero_timing.h  input_hero.c  sensor_blob.S
dts/bindings/: vendor-prefixes.txt
dts/bindings/input/: logitech,hero.yaml
include/dt-bindings/zmk/: hero_cpi.h
include/zmk/input/: hero.h
tests/unit/: CMakeLists.txt  testcase.yaml
tests/unit/src/: test_axis.c  test_cpi.c  test_timing.c
zephyr/: module.yml
